# jax2onnx

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  HANDOVER_TASKS.md  MigrationStatus.md  README.md  check_conv_types.py  check_dino_nodes.py  check_irfft.py  check_native_clone.py  debug_env.py  debug_graph.py  f64_constant_promotion_test.onnx  f64_no_inputs_test.onnx  how_to_use_onnx_ir.md  index.html  logging_config.py  mkdocs.yml  nested_param_test.onnx  objects.inv  package-lock.json  package.json  py2txt.py  pyproject.toml  python-venv  repro_dino.py  repro_dynamic.py  repro_issue.py  repro_opt.py  run_output.txt  sitemap.xml  verify_fix.py  verify_output.txt  version.py  work_notes.md  work_notes_batch_diff_rules.md  work_notes_call_params.md  work_notes_complex.md  work_notes_concat_shape_bug.md  (+22 more)
.github/workflows/: ci.yml  docs.yml  nightly-qs.yml
about/acknowledgements/: index.html
about/contributing/: index.html
about/dependencies/: index.html
about/license/: index.html
about/past_versions/: index.html
about/roadmap/: index.html
artifacts/gpt_oss_routing/: 20251110-121818_summary.md  20251113-080537_summary.md  20251113-081728_summary.md
developer_guide/architecture/: index.html
developer_guide/converter_design/: index.html
developer_guide/plugin_system/: index.html
docs/: PRNG_jax_v07.md  api.md  batching_rules.md  capture_tracer_bug.md  coverage_tables.md  design.md  design_attach_to_graph.md  equinox_linear.md  expect_graph_reference.md  fix_subgraph_output_leaking.md  function_new_world.md  function_old_world.md  index.md  jax_eval_shape_with_shape_polymorphism.md  linen_bridge.md  loosen_internal_shapes.md  migration_jax_06_to_07.md  onnx_function_migration_plan.md  onnx_if_operator.md  onnx_ir_migration.md  patching_guideline.md  poc_symbolic_primitive2.md  post_check_onnx_graph.md  post_check_onnx_graph2.md  pure_onnx_ir.md  scatter.md  scatter_plan.md  subgraph_input_handling.md  supporting_symbolic_dimensions.md  supporting_symbolic_dimensions_2.md  symbolic_dims.md  symbolic_dims_in_jax2onnx.md  symbolic_dims_in_jax2onnx_2.md
docs/about/: acknowledgements.md  contributing.md  dependencies.md  license.md  past_versions.md  roadmap.md
docs/architecture/: arch.json  tanh_mvp.md
docs/debug/: loop_refactor_notes.md
docs/dev_guides/: complex_numbers.md  expect_graph_reference.md  ir_optimizer.md  ir_reflection_guidelines.md  linen_support.md  onnx_function_usage.md  onnx_ir_builder.md  onnx_ir_typing_how_to.md  plugin_quickstart.md  subgraph_input_handling.md  typing_improvements.md
docs/developer_guide/: architecture.md  converter_design.md  plugin_system.md
docs/old_onnx/: add_01.onnx  add_10.onnx  avg_pool_00.onnx  avg_pool_10.onnx  batchnorm_00.onnx  concat_10.onnx  concat_11.onnx  conv_3x3_3_00.onnx  conv_3x3_3_11.onnx  dot_product_attention_shape_check_00.onnx  dropout_11.onnx  dropout_3d_10.onnx  dropout_high_00.onnx  einsum_attention_00.onnx  einsum_batch_matmul_00.onnx  einsum_batch_matmul_10.onnx  einsum_matmul_10.onnx  elu_00.onnx  gelu3_11.onnx  gelu_11.onnx  leaky_relu_01.onnx  leaky_relu_11.onnx  linear_general_11.onnx  linear_general_mha_projection2_00.onnx  linear_general_mha_projection2_01.onnx  log_softmax_11.onnx  max_pool_11.onnx  relu_01.onnx  relu_10.onnx  reshapeA_01.onnx  reshapeC_00.onnx  reshapeD_00.onnx  reshapeD_11.onnx  slice_basic_10.onnx  slice_last_column_10.onnx  slice_with_stride_00.onnx  softmax_01.onnx  squeeze_multiple_dims_10.onnx  squeeze_multiple_dims_11.onnx  squeeze_vit_output_00.onnx  (+14 more)
docs/onnx/: add_00.onnx  add_00_model.onnx  add_01_model.onnx  add_10_model.onnx  add_11_model.onnx  add_model.onnx  argmax_test1.onnx  argmax_test2.onnx  argmin_test1.onnx  argmin_test2.onnx  avg_pool_00_model.onnx  avg_pool_01_model.onnx  avg_pool_10_model.onnx  avg_pool_11.onnx  avg_pool_11_model.onnx  avg_pool_default_padding.onnx  avg_pool_model.onnx  batchnorm_00_model.onnx  (+589 more)
internal_docs/: deployment_readiness_roadmap.md
jax2onnx/: __init__.py  _deployment_report.py  build_onnx.py  convert.py  deployment.py  ir_utils.py  jax2onnx2  jaxpr2onnx.py  onnx_builder.py  onnx_export.py  onnx_functions.py  plugin_system.py  quickstart.py  quickstart_functions.py  serde_onnx.py  tester.py  to_onnx.py  transpose_utils.py  typing_helpers.py  user_interface.py  utils.py
logs/: jax2onnx_calls.txt
onnx_debug_output/: minimal_problem_f64.onnx  minimal_problem_v6_f64.onnx
onnx_models/: abs.onnx  fori_loop.onnx  sign.onnx  while_loop.onnx
onnx_output/: embedded_constants_corrected_example.onnx
scripts/: _coverage_generation.py  audit_ir_dynamic_access.py  check_forbidden_reflection.py  check_ir_builder_usage.py  check_typing.sh  check_variable_annotations.py  compare_dinov3_embeddings.py  compare_eqx_onnx_gpt_oss.py  compare_meta_vs_jax2onnx.py  convert_dinov3_from_equimo.py  convert_reduction_tests.py  debug_attn_parity.py  debug_norm_parity.py  debug_rope_parity.py  dino_block_deltas.py  dino_block_token_deltas.py  emit_expect_graph.py  ensure_path_markers.py  export_dinov3_pretrained.py  export_eqx_dino_example_with_mapped_weights.py  export_eqx_gpt_oss_example_with_mapped_weights.py  export_eqx_gpt_oss_subset.py  export_eqx_gpt_oss_to_onnx.py  export_flax_gpt_oss_params.py  export_flax_gpt_oss_to_onnx.py  gen_arch_diagrams.py  generate_dinov3_reference.py  generate_eqx_nn_coverage.py  generate_flax_api_coverage.py  generate_jnp_operator_coverage.py  generate_lax_operator_coverage.py  generate_migration_status.py  generate_onnx_operator_coverage.py  generate_plugin_registry.py  generate_readme.py  generate_readme.sh  generate_registry_and_tests.py  generate_tests.py  gpt_oss_routing_parity.py  inline_layer_scale.py  (+20 more)
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
src/: jax2onnx
tests/: _initializer_guard.py  conftest.py  example4.py  t_examples.py  t_generator.py  t_plugins.py  test_build_onnx.py  test_examples.py  test_gpt_oss_components.py  test_onnx_export.py  test_plugins.py  test_quickstart.py  test_save_onnx.py  test_to_onnx.py  test_transpose.py
(+3021 files in other folders)
