# file: pyproject.toml
[project]
name = "jax2onnx"
version = "0.13.0"
description = "export JAX to ONNX"
authors = [{ name = "enpasos", email = "matthias.unverzagt@enpasos.ai" }]
readme = "README.md"
requires-python = ">=3.11"  # Flax requires >=3.11, and we test 3.11, 3.12, 3.13 and 3.14
dependencies = [
    "jax>=0.7.2",
    "flax>=0.12.1",
    "ml_dtypes>=0.5.1",
    "optax>=0.2.4",
    "orbax-checkpoint>=0.11.6",
    "orbax-export>=0.0.6",
    "netron>=8.2.9",
    "onnx>=1.20.1",
    "onnxruntime>=1.24.1",
    "einops>=0.8.1",
    "equinox>=0.13.1",
    "onnx-ir>=0.2.1",
    "huggingface-hub>=0.26.0",
    "dm-pix>=0.4.4"
]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
treescope = ">=0.1.8"
torch = "==2.4.0"   

[tool.poetry.group.gpu]
optional = true

[tool.poetry.group.gpu.dependencies]
jax = { version = ">=0.7.2", extras = ["cuda12_pip"] }


[tool.poetry.group.maxtext]
optional = true

[tool.poetry.group.maxtext.dependencies]
omegaconf = "*"
transformers = "^4.48.0"
sentencepiece = "*"
tensorflow-cpu = "^2.18.0"
tensorboardX = "*"
pydantic = "*"

[tool.poetry.group.maxdiffusion]
optional = true

[tool.poetry.group.maxdiffusion.dependencies]
omegaconf = "*"
transformers = "*"
tensorflow-cpu = "^2.18.0"
tensorboardX = "*"
pydantic = "*"
absl-py = "*"
chex = "*"
datasets = "*"
ftfy = "*"
parameterized = "*"
Pillow = "*"

[tool.poetry]
name = "jax2onnx"
version = "0.13.0"
description = "export JAX to ONNX"
authors = ["enpasos <matthias.unverzagt@enpasos.ai>"]
readme = "README.md"
packages = [
    { include = "jax2onnx" }
]

[[tool.poetry.source]]
name = "jax-releases"
url = "https://storage.googleapis.com/jax-releases/jax_releases.html"
priority = "supplemental"





[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-json-report = "^1.5.0"
pre-commit = "^4.1.0"
ruff = "^0.9.5"
pytest-order = "^1.3.0"
black = "^25.1.0"
types-pyyaml = "^6.0.12.20250822"
pytest-cov = "^7.0.0"
mypy = "==1.15.0"
mkdocs-material = "^9.5.0"
mkdocstrings = {extras = ["python"], version = "0.26.1"}
mkdocs = "^1.6.0"
griffe = ">=0.44,<1.0" 
pytest-xdist = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--disable-warnings"
testpaths = ["tests"]
norecursedirs = ["tmp", "scripts"]


[tool.black]
# line-length = 88
target-version = ["py310"]

[tool.ruff]
# line-length = 88
target-version = "py310"
# extend-select = ["I", "B", "UP", "N"]
# extend-ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
incremental = false
files = [
    "jax2onnx/converter",
    "jax2onnx/ir_utils.py",
    "jax2onnx/plugins/_axis0_utils.py",
    "jax2onnx/plugins/_attention_utils.py",
    "jax2onnx/plugins/_complex_utils.py",
    "jax2onnx/plugins/_ir_shapes.py",
    "jax2onnx/plugins/_loop_extent_meta.py",
    "jax2onnx/plugins/_patching.py",
    "jax2onnx/plugins/_post_check_onnx_graph.py",
    "jax2onnx/plugins/_utils.py",
    "jax2onnx/plugins/__init__.py",
    "jax2onnx/plugins/dm_pix/__init__.py",
    "jax2onnx/plugins/dm_pix/depth_to_space.py",
    "jax2onnx/plugins/dm_pix/space_to_depth.py",
    "jax2onnx/plugins/jax/_autodiff_utils.py",
    "jax2onnx/plugins/jax/_batching_utils.py",
    "jax2onnx/plugins/jax/core/__init__.py",
    "jax2onnx/plugins/jax/core/custom_jvp_call.py",
    "jax2onnx/plugins/jax/core/custom_vjp_call.py",
    "jax2onnx/plugins/jax/core/dim_as_value.py",
    "jax2onnx/plugins/jax/core/jit.py",
    "jax2onnx/plugins/jax/core/name.py",
    "jax2onnx/plugins/jax/image/__init__.py",
    "jax2onnx/plugins/jax/image/_common.py",
    "jax2onnx/plugins/jax/image/resize.py",
    "jax2onnx/plugins/jax/lax/__init__.py",
    "jax2onnx/plugins/jax/lax/_arg_utils.py",
    "jax2onnx/plugins/jax/lax/_control_flow_utils.py",
    "jax2onnx/plugins/jax/lax/_cum_extrema.py",
    "jax2onnx/plugins/jax/lax/_index_utils.py",
    "jax2onnx/plugins/jax/lax/_reduction_registry.py",
    "jax2onnx/plugins/jax/lax/_reduce_utils.py",
    "jax2onnx/plugins/jax/lax/abs.py",
    "jax2onnx/plugins/jax/lax/acos.py",
    "jax2onnx/plugins/jax/lax/add.py",
    "jax2onnx/plugins/jax/lax/add_any.py",
    "jax2onnx/plugins/jax/lax/and.py",
    "jax2onnx/plugins/jax/lax/approx_top_k.py",
    "jax2onnx/plugins/jax/lax/argmax.py",
    "jax2onnx/plugins/jax/lax/argmin.py",
    "jax2onnx/plugins/jax/lax/asin.py",
    "jax2onnx/plugins/jax/lax/atan.py",
    "jax2onnx/plugins/jax/lax/atan2.py",
    "jax2onnx/plugins/jax/lax/bessel_i0e.py",
    "jax2onnx/plugins/jax/lax/bessel_i1e.py",
    "jax2onnx/plugins/jax/lax/bitcast_convert_type.py",
    "jax2onnx/plugins/jax/lax/bitwise_not.py",
    "jax2onnx/plugins/jax/lax/cbrt.py",
    "jax2onnx/plugins/jax/lax/ceil.py",
    "jax2onnx/plugins/jax/lax/cholesky.py",
    "jax2onnx/plugins/jax/lax/cholesky_update.py",
    "jax2onnx/plugins/jax/lax/clamp.py",
    "jax2onnx/plugins/jax/lax/conj.py",
    "jax2onnx/plugins/jax/lax/concatenate.py",
    "jax2onnx/plugins/jax/lax/convert_element_type.py",
    "jax2onnx/plugins/jax/lax/copy.py",
    "jax2onnx/plugins/jax/lax/cos.py",
    "jax2onnx/plugins/jax/lax/cosh.py",
    "jax2onnx/plugins/jax/lax/cumlogsumexp.py",
    "jax2onnx/plugins/jax/lax/cumprod.py",
    "jax2onnx/plugins/jax/lax/cumsum.py",
    "jax2onnx/plugins/jax/lax/custom_linear_solve.py",
    "jax2onnx/plugins/jax/lax/device_put.py",
    "jax2onnx/plugins/jax/lax/div.py",
    "jax2onnx/plugins/jax/lax/dynamic_update_slice.py",
    "jax2onnx/plugins/jax/lax/eq.py",
    "jax2onnx/plugins/jax/lax/erf.py",
    "jax2onnx/plugins/jax/lax/erfc.py",
    "jax2onnx/plugins/jax/lax/erf_inv.py",
    "jax2onnx/plugins/jax/lax/exp.py",
    "jax2onnx/plugins/jax/lax/exp2.py",
    "jax2onnx/plugins/jax/lax/expm1.py",
    "jax2onnx/plugins/jax/lax/floor.py",
    "jax2onnx/plugins/jax/lax/ge.py",
    "jax2onnx/plugins/jax/lax/gt.py",
    "jax2onnx/plugins/jax/lax/hessenberg.py",
    "jax2onnx/plugins/jax/lax/householder_product.py",
    "jax2onnx/plugins/jax/lax/imag.py",
    "jax2onnx/plugins/jax/lax/integer_pow.py",
    "jax2onnx/plugins/jax/lax/iota.py",
    "jax2onnx/plugins/jax/lax/is_finite.py",
    "jax2onnx/plugins/jax/lax/le.py",
    "jax2onnx/plugins/jax/lax/log.py",
    "jax2onnx/plugins/jax/lax/log1p.py",
    "jax2onnx/plugins/jax/lax/logistic.py",
    "jax2onnx/plugins/jax/lax/lt.py",
    "jax2onnx/plugins/jax/lax/lu.py",
    "jax2onnx/plugins/jax/lax/lu_pivots_to_permutation.py",
    "jax2onnx/plugins/jax/lax/max.py",
    "jax2onnx/plugins/jax/lax/min.py",
    "jax2onnx/plugins/jax/lax/mul.py",
    "jax2onnx/plugins/jax/lax/ne.py",
    "jax2onnx/plugins/jax/lax/neg.py",
    "jax2onnx/plugins/jax/lax/nextafter.py",
    "jax2onnx/plugins/jax/lax/optimization_barrier.py",
    "jax2onnx/plugins/jax/lax/or.py",
    "jax2onnx/plugins/jax/lax/ormqr.py",
    "jax2onnx/plugins/jax/lax/pad.py",
    "jax2onnx/plugins/jax/lax/pjit.py",
    "jax2onnx/plugins/jax/lax/pow.py",
    "jax2onnx/plugins/jax/lax/qr.py",
    "jax2onnx/plugins/jax/lax/ragged_dot_general.py",
    "jax2onnx/plugins/jax/lax/reduce.py",
    "jax2onnx/plugins/jax/lax/reduce_and.py",
    "jax2onnx/plugins/jax/lax/reduce_max.py",
    "jax2onnx/plugins/jax/lax/reduce_min.py",
    "jax2onnx/plugins/jax/lax/reduce_or.py",
    "jax2onnx/plugins/jax/lax/reduce_precision.py",
    "jax2onnx/plugins/jax/lax/reduce_sum.py",
    "jax2onnx/plugins/jax/lax/reduce_window.py",
    "jax2onnx/plugins/jax/lax/reduce_window_max.py",
    "jax2onnx/plugins/jax/lax/reduce_xor.py",
    "jax2onnx/plugins/jax/lax/real.py",
    "jax2onnx/plugins/jax/lax/rem.py",
    "jax2onnx/plugins/jax/lax/remat2.py",
    "jax2onnx/plugins/jax/lax/rev.py",
    "jax2onnx/plugins/jax/lax/round.py",
    "jax2onnx/plugins/jax/lax/rsqrt.py",
    "jax2onnx/plugins/jax/lax/rng_bit_generator.py",
    "jax2onnx/plugins/jax/lax/rng_uniform.py",
    "jax2onnx/plugins/jax/lax/scatter_add.py",
    "jax2onnx/plugins/jax/lax/scatter_max.py",
    "jax2onnx/plugins/jax/lax/scatter_min.py",
    "jax2onnx/plugins/jax/lax/scatter_mul.py",
    "jax2onnx/plugins/jax/lax/scatter_sub.py",
    "jax2onnx/plugins/jax/lax/schur.py",
    "jax2onnx/plugins/jax/lax/shard_map.py",
    "jax2onnx/plugins/jax/lax/shift_left.py",
    "jax2onnx/plugins/jax/lax/shift_right_arithmetic.py",
    "jax2onnx/plugins/jax/lax/shift_right_logical.py",
    "jax2onnx/plugins/jax/lax/sign.py",
    "jax2onnx/plugins/jax/lax/sin.py",
    "jax2onnx/plugins/jax/lax/sinh.py",
    "jax2onnx/plugins/jax/lax/slice.py",
    "jax2onnx/plugins/jax/lax/split.py",
    "jax2onnx/plugins/jax/lax/sqrt.py",
    "jax2onnx/plugins/jax/lax/square.py",
    "jax2onnx/plugins/jax/lax/select.py",
    "jax2onnx/plugins/jax/lax/select_n.py",
    "jax2onnx/plugins/jax/lax/sharding_constraint.py",
    "jax2onnx/plugins/jax/lax/squeeze.py",
    "jax2onnx/plugins/jax/lax/sort.py",
    "jax2onnx/plugins/jax/lax/stop_gradient.py",
    "jax2onnx/plugins/jax/lax/sub.py",
    "jax2onnx/plugins/jax/lax/symmetric_product.py",
    "jax2onnx/plugins/jax/lax/tan.py",
    "jax2onnx/plugins/jax/lax/triangular_solve.py",
    "jax2onnx/plugins/jax/lax/tridiagonal.py",
    "jax2onnx/plugins/jax/lax/tridiagonal_solve.py",
    "jax2onnx/plugins/jax/lax/tanh.py",
    "jax2onnx/plugins/jax/lax/top_k.py",
    "jax2onnx/plugins/jax/lax/xor.py",
    "jax2onnx/plugins/jax/numpy/__init__.py",
    "jax2onnx/plugins/jax/numpy/_common.py",
    "jax2onnx/plugins/jax/numpy/_reduction_utils.py",
    "jax2onnx/plugins/jax/numpy/_unary_utils.py",
    "jax2onnx/plugins/jax/numpy/abs.py",
    "jax2onnx/plugins/jax/numpy/acos.py",
    "jax2onnx/plugins/jax/numpy/acosh.py",
    "jax2onnx/plugins/jax/numpy/add.py",
    "jax2onnx/plugins/jax/numpy/all.py",
    "jax2onnx/plugins/jax/numpy/amax.py",
    "jax2onnx/plugins/jax/numpy/amin.py",
    "jax2onnx/plugins/jax/numpy/any.py",
    "jax2onnx/plugins/jax/numpy/arange.py",
    "jax2onnx/plugins/jax/numpy/argmax.py",
    "jax2onnx/plugins/jax/numpy/argmin.py",
    "jax2onnx/plugins/jax/numpy/asin.py",
    "jax2onnx/plugins/jax/numpy/asinh.py",
    "jax2onnx/plugins/jax/numpy/atan.py",
    "jax2onnx/plugins/jax/numpy/atan2.py",
    "jax2onnx/plugins/jax/numpy/atanh.py",
    "jax2onnx/plugins/jax/numpy/bitwise_and.py",
    "jax2onnx/plugins/jax/numpy/bitwise_left_shift.py",
    "jax2onnx/plugins/jax/numpy/bitwise_not.py",
    "jax2onnx/plugins/jax/numpy/bitwise_or.py",
    "jax2onnx/plugins/jax/numpy/bitwise_right_shift.py",
    "jax2onnx/plugins/jax/numpy/bitwise_xor.py",
    "jax2onnx/plugins/jax/numpy/ceil.py",
    "jax2onnx/plugins/jax/numpy/clip.py",
    "jax2onnx/plugins/jax/numpy/composite_metadata.py",
    "jax2onnx/plugins/jax/numpy/composite_metadata_batch2.py",
    "jax2onnx/plugins/jax/numpy/composite_metadata_batch3.py",
    "jax2onnx/plugins/jax/numpy/composite_metadata_batch4.py",
    "jax2onnx/plugins/jax/numpy/composite_metadata_batch5.py",
    "jax2onnx/plugins/jax/numpy/composite_metadata_batch6.py",
    "jax2onnx/plugins/jax/numpy/compress.py",
    "jax2onnx/plugins/jax/numpy/concatenate.py",
    "jax2onnx/plugins/jax/numpy/conj.py",
    "jax2onnx/plugins/jax/numpy/copysign.py",
    "jax2onnx/plugins/jax/numpy/cos.py",
    "jax2onnx/plugins/jax/numpy/cosh.py",
    "jax2onnx/plugins/jax/numpy/cumprod.py",
    "jax2onnx/plugins/jax/numpy/cumsum.py",
    "jax2onnx/plugins/jax/numpy/diag.py",
    "jax2onnx/plugins/jax/numpy/diagonal.py",
    "jax2onnx/plugins/jax/numpy/digitize.py",
    "jax2onnx/plugins/jax/numpy/divide.py",
    "jax2onnx/plugins/jax/numpy/dot.py",
    "jax2onnx/plugins/jax/numpy/einsum.py",
    "jax2onnx/plugins/jax/numpy/equal.py",
    "jax2onnx/plugins/jax/numpy/exp.py",
    "jax2onnx/plugins/jax/numpy/exp2.py",
    "jax2onnx/plugins/jax/numpy/expm1.py",
    "jax2onnx/plugins/jax/numpy/eye.py",
    "jax2onnx/plugins/jax/numpy/fabs.py",
    "jax2onnx/plugins/jax/numpy/fft.py",
    "jax2onnx/plugins/jax/numpy/floor.py",
    "jax2onnx/plugins/jax/numpy/floor_divide.py",
    "jax2onnx/plugins/jax/numpy/fmod.py",
    "jax2onnx/plugins/jax/numpy/frexp.py",
    "jax2onnx/plugins/jax/numpy/full.py",
    "jax2onnx/plugins/jax/numpy/greater.py",
    "jax2onnx/plugins/jax/numpy/greater_equal.py",
    "jax2onnx/plugins/jax/numpy/histogram.py",
    "jax2onnx/plugins/jax/numpy/histogram2d.py",
    "jax2onnx/plugins/jax/numpy/histogramdd.py",
    "jax2onnx/plugins/jax/numpy/interp.py",
    "jax2onnx/plugins/jax/numpy/invert.py",
    "jax2onnx/plugins/jax/numpy/isfinite.py",
    "jax2onnx/plugins/jax/numpy/ldexp.py",
    "jax2onnx/plugins/jax/numpy/left_shift.py",
    "jax2onnx/plugins/jax/numpy/less.py",
    "jax2onnx/plugins/jax/numpy/less_equal.py",
    "jax2onnx/plugins/jax/numpy/linalg_det.py",
    "jax2onnx/plugins/jax/numpy/linalg_inv.py",
    "jax2onnx/plugins/jax/numpy/linalg_norm.py",
    "jax2onnx/plugins/jax/numpy/linalg_solve.py",
    "jax2onnx/plugins/jax/numpy/linalg_tensorinv.py",
    "jax2onnx/plugins/jax/numpy/linalg_tensorsolve.py",
    "jax2onnx/plugins/jax/numpy/linspace.py",
    "jax2onnx/plugins/jax/numpy/log.py",
    "jax2onnx/plugins/jax/numpy/matmul.py",
    "jax2onnx/plugins/jax/numpy/max.py",
    "jax2onnx/plugins/jax/numpy/maximum.py",
    "jax2onnx/plugins/jax/numpy/mean.py",
    "jax2onnx/plugins/jax/numpy/min.py",
    "jax2onnx/plugins/jax/numpy/minimum.py",
    "jax2onnx/plugins/jax/numpy/moveaxis.py",
    "jax2onnx/plugins/jax/numpy/nancumprod.py",
    "jax2onnx/plugins/jax/numpy/ones.py",
    "jax2onnx/plugins/jax/numpy/outer.py",
    "jax2onnx/plugins/jax/numpy/pad.py",
    "jax2onnx/plugins/jax/numpy/polyfit.py",
    "jax2onnx/plugins/jax/numpy/pow.py",
    "jax2onnx/plugins/jax/numpy/prod.py",
    "jax2onnx/plugins/jax/numpy/reshape.py",
    "jax2onnx/plugins/jax/numpy/right_shift.py",
    "jax2onnx/plugins/jax/numpy/roots.py",
    "jax2onnx/plugins/jax/numpy/searchsorted.py",
    "jax2onnx/plugins/jax/numpy/select.py",
    "jax2onnx/plugins/jax/numpy/shape.py",
    "jax2onnx/plugins/jax/numpy/sign.py",
    "jax2onnx/plugins/jax/numpy/sin.py",
    "jax2onnx/plugins/jax/numpy/sinh.py",
    "jax2onnx/plugins/jax/numpy/size.py",
    "jax2onnx/plugins/jax/numpy/sort.py",
    "jax2onnx/plugins/jax/numpy/spacing.py",
    "jax2onnx/plugins/jax/numpy/sqrt.py",
    "jax2onnx/plugins/jax/numpy/split.py",
    "jax2onnx/plugins/jax/numpy/squeeze.py",
    "jax2onnx/plugins/jax/numpy/stack.py",
    "jax2onnx/plugins/jax/numpy/sum.py",
    "jax2onnx/plugins/jax/numpy/take.py",
    "jax2onnx/plugins/jax/numpy/tan.py",
    "jax2onnx/plugins/jax/numpy/tanh.py",
    "jax2onnx/plugins/jax/numpy/tile.py",
    "jax2onnx/plugins/jax/numpy/transpose.py",
    "jax2onnx/plugins/jax/numpy/trilu.py",
    "jax2onnx/plugins/jax/numpy/unique.py",
    "jax2onnx/plugins/jax/numpy/unstack.py",
    "jax2onnx/plugins/jax/numpy/where.py",
    "jax2onnx/plugins/jax/numpy/windows.py",
    "jax2onnx/plugins/jax/numpy/zeros.py",
    "jax2onnx/plugins/jax/nn/__init__.py",
    "jax2onnx/plugins/jax/nn/_builder_utils.py",
    "jax2onnx/plugins/jax/nn/celu.py",
    "jax2onnx/plugins/jax/nn/dot_product_attention.py",
    "jax2onnx/plugins/jax/nn/elu.py",
    "jax2onnx/plugins/jax/nn/gelu.py",
    "jax2onnx/plugins/jax/nn/glu.py",
    "jax2onnx/plugins/jax/nn/hard_sigmoid.py",
    "jax2onnx/plugins/jax/nn/hard_swish.py",
    "jax2onnx/plugins/jax/nn/hard_tanh.py",
    "jax2onnx/plugins/jax/nn/hardmax.py",
    "jax2onnx/plugins/jax/nn/identity.py",
    "jax2onnx/plugins/jax/nn/initializers/__init__.py",
    "jax2onnx/plugins/jax/nn/initializers/truncated_normal.py",
    "jax2onnx/plugins/jax/nn/leaky_relu.py",
    "jax2onnx/plugins/jax/nn/log1mexp.py",
    "jax2onnx/plugins/jax/nn/log_sigmoid.py",
    "jax2onnx/plugins/jax/nn/log_softmax.py",
    "jax2onnx/plugins/jax/nn/logmeanexp.py",
    "jax2onnx/plugins/jax/nn/logsumexp.py",
    "jax2onnx/plugins/jax/nn/mish.py",
    "jax2onnx/plugins/jax/nn/one_hot.py",
    "jax2onnx/plugins/jax/nn/relu.py",
    "jax2onnx/plugins/jax/nn/relu6.py",
    "jax2onnx/plugins/jax/nn/scaled_dot_general.py",
    "jax2onnx/plugins/jax/nn/scaled_matmul.py",
    "jax2onnx/plugins/jax/nn/selu.py",
    "jax2onnx/plugins/jax/nn/sigmoid.py",
    "jax2onnx/plugins/jax/nn/silu.py",
    "jax2onnx/plugins/jax/nn/softmax.py",
    "jax2onnx/plugins/jax/nn/softplus.py",
    "jax2onnx/plugins/jax/nn/softsign.py",
    "jax2onnx/plugins/jax/nn/sparse_plus.py",
    "jax2onnx/plugins/jax/nn/sparse_sigmoid.py",
    "jax2onnx/plugins/jax/nn/squareplus.py",
    "jax2onnx/plugins/jax/nn/standardize.py",
    "jax2onnx/plugins/jax/nn/tanh.py",
    "jax2onnx/plugins/jax/nn/thresholded_relu.py",
    "jax2onnx/plugins/jax/random/__init__.py",
    "jax2onnx/plugins/jax/random/bernoulli.py",
    "jax2onnx/plugins/jax/random/categorical.py",
    "jax2onnx/plugins/jax/random/normal.py",
    "jax2onnx/plugins/jax/random/random_bits.py",
    "jax2onnx/plugins/jax/random/random_fold_in.py",
    "jax2onnx/plugins/jax/random/random_seed.py",
    "jax2onnx/plugins/plugin_system.py",
]
follow_imports = "skip"
allow_untyped_globals = false
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "onnx_ir",
    "onnx_ir.*",
]
follow_imports = "normal"

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "jax2onnx.sandbox.*",
]
ignore_missing_imports = true
allow_untyped_globals = true
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "jax2onnx.plugins._post_check_onnx_graph",
    "jax2onnx.utils.debug",
]
disallow_untyped_defs = false
check_untyped_defs = false

[tool.jax]
enable_x64 = true



[tool.jax2onnx.logging]
default_level = "WARNING"
format = "%(asctime)s [%(levelname)s] %(name)s:%(lineno)d: %(message)s"

[tool.jax2onnx.logging.levels]
"jax2onnx" = "INFO"
