# file: pyproject.toml
[project]
name = "jax2onnx"
version = "0.13.0"
description = "export JAX to ONNX"
authors = [{ name = "enpasos", email = "matthias.unverzagt@enpasos.ai" }]
readme = "README.md"
requires-python = ">=3.11"  # Flax requires >=3.11, and we test 3.11, 3.12, 3.13 and 3.14
dependencies = [
    "jax>=0.7.2",
    "flax>=0.12.1",
    "ml_dtypes>=0.5.1",
    "optax>=0.2.4",
    "orbax-checkpoint>=0.11.6",
    "orbax-export>=0.0.6",
    "netron>=8.2.9",
    "onnx>=1.20.1",
    "onnxruntime>=1.24.1",
    "einops>=0.8.1",
    "equinox>=0.13.1",
    "onnx-ir>=0.2.1",
    "huggingface-hub>=0.26.0",
    "dm-pix>=0.4.4"
]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
treescope = ">=0.1.8"
torch = "==2.4.0"   

[tool.poetry.group.gpu]
optional = true

[tool.poetry.group.gpu.dependencies]
jax = { version = ">=0.7.2", extras = ["cuda12_pip"] }


[tool.poetry.group.maxtext]
optional = true

[tool.poetry.group.maxtext.dependencies]
omegaconf = "*"
transformers = "^4.48.0"
sentencepiece = "*"
tensorflow-cpu = "^2.18.0"
tensorboardX = "*"
pydantic = "*"

[tool.poetry.group.maxdiffusion]
optional = true

[tool.poetry.group.maxdiffusion.dependencies]
omegaconf = "*"
transformers = "*"
tensorflow-cpu = "^2.18.0"
tensorboardX = "*"
pydantic = "*"
absl-py = "*"
chex = "*"
datasets = "*"
ftfy = "*"
parameterized = "*"
Pillow = "*"

[tool.poetry]
name = "jax2onnx"
version = "0.13.0"
description = "export JAX to ONNX"
authors = ["enpasos <matthias.unverzagt@enpasos.ai>"]
readme = "README.md"
packages = [
    { include = "jax2onnx" }
]

[[tool.poetry.source]]
name = "jax-releases"
url = "https://storage.googleapis.com/jax-releases/jax_releases.html"
priority = "supplemental"





[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-json-report = "^1.5.0"
pre-commit = "^4.1.0"
ruff = "^0.9.5"
pytest-order = "^1.3.0"
black = "^25.1.0"
types-pyyaml = "^6.0.12.20250822"
pytest-cov = "^7.0.0"
mypy = "==1.15.0"
mkdocs-material = "^9.5.0"
mkdocstrings = {extras = ["python"], version = "0.26.1"}
mkdocs = "^1.6.0"
griffe = ">=0.44,<1.0" 
pytest-xdist = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--disable-warnings"
testpaths = ["tests"]
norecursedirs = ["tmp", "scripts"]


[tool.black]
# line-length = 88
target-version = ["py310"]

[tool.ruff]
# line-length = 88
target-version = "py310"
# extend-select = ["I", "B", "UP", "N"]
# extend-ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
incremental = false
files = [
    "jax2onnx/converter",
    "jax2onnx/ir_utils.py",
    "jax2onnx/plugins/_axis0_utils.py",
    "jax2onnx/plugins/_attention_utils.py",
    "jax2onnx/plugins/_complex_utils.py",
    "jax2onnx/plugins/_ir_shapes.py",
    "jax2onnx/plugins/_loop_extent_meta.py",
    "jax2onnx/plugins/_patching.py",
    "jax2onnx/plugins/_post_check_onnx_graph.py",
    "jax2onnx/plugins/_utils.py",
    "jax2onnx/plugins/__init__.py",
    "jax2onnx/plugins/dm_pix",
    "jax2onnx/plugins/flax/nnx",
    "jax2onnx/plugins/flax/linen/activation.py",
    "jax2onnx/plugins/flax/linen/avg_pool.py",
    "jax2onnx/plugins/flax/linen/dropout.py",
    "jax2onnx/plugins/flax/linen/max_pool.py",
    "jax2onnx/plugins/flax/linen/min_pool.py",
    "jax2onnx/plugins/flax/linen/pool.py",
    "jax2onnx/plugins/flax/linen/recurrent.py",
    "jax2onnx/plugins/jax/_autodiff_utils.py",
    "jax2onnx/plugins/jax/_batching_utils.py",
    "jax2onnx/plugins/jax/core",
    "jax2onnx/plugins/jax/image",
    "jax2onnx/plugins/jax/lax",
    "jax2onnx/plugins/jax/numpy",
    "jax2onnx/plugins/jax/nn",
    "jax2onnx/plugins/jax/random",
    "jax2onnx/plugins/plugin_system.py",
]
follow_imports = "skip"
allow_untyped_globals = false
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "onnx_ir",
    "onnx_ir.*",
]
follow_imports = "normal"

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "jax2onnx.sandbox.*",
]
ignore_missing_imports = true
allow_untyped_globals = true
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "jax2onnx.plugins._post_check_onnx_graph",
    "jax2onnx.utils.debug",
]
disallow_untyped_defs = false
check_untyped_defs = false

[tool.jax]
enable_x64 = true



[tool.jax2onnx.logging]
default_level = "WARNING"
format = "%(asctime)s [%(levelname)s] %(name)s:%(lineno)d: %(message)s"

[tool.jax2onnx.logging.levels]
"jax2onnx" = "INFO"
